# goit-pythonweb-hw-10

./: .env.example  README.md  docker-compose.yaml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 957001df005b_init.py  fc3c139143a1_init.py
src/api/: auth.py  contacts.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: schemas.py  users.py
src/services/: auth.py  contacts.py  users.py
